# UR10_teleoperation_trajectory_collect

./: README.md
ur10_move_test/: CMakeLists.txt  package.xml  readme.txt
ur10_move_test/include/: ur10_gripper.h  ur10_inverse_update.h  ur10_move.h  ur10_teleoperation.h  ur10_topic_subscriber.h
ur10_move_test/scripts/: imitation_ceshi.py  imitation_test.py  robot_arm_lstm_model.pth  test.py  test_torch.py  train_BC_circle.py  ur10_imitation_test.py  ur10_trajectory.py
ur10_move_test/src/: gripper_test.cpp  image_test.cpp  model_ur10.cpp  ur10_collect.cpp  ur10_gripper.cpp  ur10_inverse.cpp  ur10_main.cpp  ur10_move.cpp  ur10_teleoperation.cpp  ur10_topic_subscriber.cpp  ur10_trajectory_collect.cpp
ur_python_pkg/: CMakeLists.txt  package.xml  setup.py
ur_python_pkg/src/ur_python_pkg/: __init__.py  ur10_inverse.py  ur10_move.py
